objects/Account_Salesview__c.object
<CustomObject>
    <description>Junction between Account and Salesview table.</description>
    <fields>
        <fullName>AccountDistributionChannelCode__c</fullName>
        <formula>SalesView__r.Distribution_Channel_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountDistributionChannelCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountDivision__c</fullName>
        <formula>SalesView__r.Sales_Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountDivision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSalesOrganizationCode__c</fullName>
        <formula>SalesView__r.Sales_Organization_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountSalesOrganizationCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account Name</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Sales Views</relationshipLabel>
        <relationshipName>AccountSalesviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Group__c</fullName>
        <label>Authorization Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDEXX_Region_Code__c</fullName>
        <label>IDEXX Region Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms1__c</fullName>
        <label>Incoterms1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_2__c</fullName>
        <label>Incoterms 2</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_for_Deletion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked for Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Block_Code__c</fullName>
        <label>Order Block Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Block_Desc__c</fullName>
        <label>Order Block Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Group__c</fullName>
        <label>Price Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Number__c</fullName>
        <label>SAP Customer Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrg_DistChann_Div_Cust__c</fullName>
        <description>External Id used for data integration.</description>
        <externalId>true</externalId>
        <label>IDEXX Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesView__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account Salesview</description>
        <label>Salesview</label>
        <referenceTo>Salesview__c</referenceTo>
        <relationshipLabel>Account Sales Views</relationshipLabel>
        <relationshipName>AccountSalesviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <label>Sales District</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Account Sales View</label>
    <nameField>
        <label>Account SalesView Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Sales Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>